--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,12 +11,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    steps: 
-      - name: 'Before' 
-        run: ls   
-
+    steps:  
       - uses: actions/checkout@v3
 
-      - name: 'After' 
-        run: ls  
+      - name: "Login to docker hub"
+        run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
+       
       
