--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,5 +16,11 @@ jobs:
 
       - name: "Login to docker hub"
         run: docker login --username ${{ secrets.DOCKER_USERNAME }} --password ${{ secrets.DOCKER_TOKEN }}
-       
+
+      - name: "Building image"
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/img .
+
+      - name: "Pushimg image"
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/img
+        
       
